# assisted-ai-practice

./: .gitignore  JOURNAL.md  README.md
module2/config-service/svc/: .env.test  pyproject.toml
module2/config-service/svc/api/: __init__.py
module2/config-service/svc/config/: settings.py
module2/config-service/svc/database/: __init__.py
module2/config-service/svc/models/: application.py  application_test.py
module2/config-service/svc/repositories/: configuration_repository.py
module3/svc/: database.py  database_sqlite.py  docker-compose.yml  load_testing.py  main.py  main_test.py  migrations.py  migrations_test.py  models.py  models_test.py  pyproject.toml  repository.py  repository_base.py  run_test_app.py  test_integration.py  test_manual.py  test_observability_integration.py
module3/svc/migrations/: 001_initial_schema.sql
module3/svc/observability/: otel-collector.yml  prometheus.yml
module3/svc/routers/: applications.py  configurations.py
module5/acme-devops-api/: Dockerfile  README.md  api-server  app.py  pyproject.toml
module5/acme-devops-api/data/: environments.json  release_health.json
module5/acme-devops-api/lib/: __init__.py  data_loader.py  error_handler.py  response_formatter.py
module5/acme-devops-api/routes/: __init__.py  deployments.py  deployments_test.py  health.py  health_test.py  logs.py  logs_test.py  metrics.py  metrics_test.py
module5/http-mcp-server/: Dockerfile  README.md  main.py  pyproject.toml  server.py
module5/stdio-mcp-server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
module5/stdio-mcp-server/src/: cli_wrapper.py  server.py  validation.py
module5/stdio-mcp-server/src/tools/: __init__.py  devops.py
module5/stdio-mcp-server/tests/: test_check_health.py  test_cli_wrapper.py  test_devops_tools.py  test_error_handling.py  test_initialize.py  test_integration_devops_tools.py  test_list_releases.py  test_ping_tool.py  test_promote_release.py  test_promotion_validation.py  test_shutdown.py  test_validation.py
module7/: .env.example  .gitignore  README.md  README_USAGE.md  agent.py  cli.py  lcov.info  pyproject.toml
module7/context/: manager.py
module7/docs/: API.md  DESIGN.md  EXERCISE.md  MANUAL_TEST_PLAN.md  PLAN.md  PROGRESS.md  STEPS.md
module7/evals/: __init__.py  evaluator.py  reporters.py  scenarios.py
module7/examples/: basic_usage.py  run_evaluation.py
module7/models/: config.py  message.py
module7/observability/: tracer.py
module7/persistence/: store.py
module7/providers/: anthropic.py
module7/src/: conftest.py
module7/src/detective_agent/: __init__.py  agent.py  agent_test.py  config.py  models.py  system_prompt.py
module7/src/detective_agent/context/: __init__.py  manager.py
module7/src/detective_agent/models/: __init__.py  message_test.py
module7/src/detective_agent/observability/: __init__.py  exporter.py  tracer.py
module7/src/detective_agent/persistence/: __init__.py  store.py
module7/src/detective_agent/providers/: __init__.py  anthropic.py  anthropic_test.py  base.py
module7/src/detective_agent/retry/: __init__.py  strategy.py
module7/src/detective_agent/tools/: __init__.py  registry.py  release_tools.py
module7/tests/: agent_test.py  config_test.py  conftest.py  context_test.py  eval_test.py  integration_test.py  message_test.py  observability_test.py  provider_test.py  registry_test.py  retry_test.py  store_test.py  test_agent.py  test_config.py  test_context.py  test_integration.py  test_message.py  test_observability.py  test_provider.py  test_store.py  tool_integration_test.py
module8/: .env.example  .gitignore  Dockerfile.chroma-mcp  README.md  cli.py  docker-compose.yml  lcov.info  pyproject.toml
module8/data/: benchmark_results.json
module8/docs/: API.md  DESIGN.md  ENGINEERING_REVIEW.md  EXERCISE.md  INTEGRATE.md  MANUAL_TEST_PLAN.md  MCP_INTEGRATION.md  MCP_SUMMARY.md  PLAN.md  PROGRESS.md  STEPS.md  TEST_COVERAGE_TASKS.md
module8/evals/: evaluator.py
module8/examples/: __init__.py  basic_usage.py  feature_investigation.py  feature_investigation_phase2.py  feature_investigation_phase3.py  feature_investigation_phase4.py  feature_investigation_phase5.py  mcp_integration.py  run_evaluation.py  run_evaluations.py
module8/graphiti/: Dockerfile  README.md  graphiti_mcp_server.py  pyproject.toml  test_integration.py  test_server.py
module8/incoming_data/: 00-COMMUNITY_SHARE.md  jira_metadata.json
module8/incoming_data/feature1/code/: commit_001_initial_schema.diff  commit_002_api_endpoints.diff  commit_003_background_jobs.diff  commit_004_notification_integration.diff  commit_005_frontend_components.diff  commit_006_bug_fixes.diff
module8/incoming_data/feature1/github/: pr_342.json  pr_342_comments.json
module8/incoming_data/feature1/jira/: feature_issue.json  issue_changelog.json
module8/incoming_data/feature1/metrics/: performance_benchmarks.json  pipeline_results.json  security_scan_results.json  test_coverage_report.json  unit_test_results.json
module8/incoming_data/feature1/planning/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT_PLAN.md  DESIGN_DOC.md  USER_STORY.md
module8/incoming_data/feature1/reviews/: design_review_2025-08-15.md  security.json  stakeholders.json  uat.json
module8/incoming_data/feature2/code/: commit_001_qr_generation.diff  (+5 more)
module8/scripts/: benchmark_memory.py  chroma_mcp_sse_server.py  ingest_code_to_neo4j.py  ingest_to_vector_store.py  neo4j_code_cli.sh  query_neo4j_code.py  query_vector_store.py  vector_store_cli.sh  vector_store_tools.py
module8/src/investigator_agent/: __init__.py  agent.py  config.py  models.py  system_prompt.py
module8/tests/: agent_test.py  analysis_test.py  config_test.py  conftest.py  context_test.py  docs_test.py  eval_test.py  evaluator_test.py  graphiti_integration_test.py  graphiti_server_test.py  integration_test.py  jira_test.py  mcp_client_test.py  mcp_config_test.py  mcp_store_test.py  message_test.py  observability_test.py  provider_test.py  registry_test.py  retry_test.py  store_test.py  tokens_test.py  tool_integration_test.py
(+496 files in other folders)
