[project]
name = "acme-devops-api"
version = "1.0.0"
description = "DevOps Dashboard REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "routes", "lib", "data"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
testpaths = ["routes"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
