[project]
name = "http-mcp-server"
version = "0.1.0"
description = "HTTP MCP Server for acme-devops-api integration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "typing-extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
