[project]
name = "stdio-mcp-server"
version = "0.1.0"
description = "Minimal MCP server using STDIO transport"
requires-python = ">=3.11"
dependencies = [
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
