[project]
name = "graphiti-mcp-server"
version = "0.1.0"
description = "Graphiti MCP Server with SSE transport for temporal knowledge graphs"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core>=0.3.0",
    "mcp>=0.9.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
